--- a/spa-vue/index.html
+++ b/spa-vue/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link rel="stylesheet" href="static/materialize-css/dist/css/materialize.min.css">
     <title>spa-vue</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="static/materialize-css/dist/js/materialize.min.js"></script>
   </body>
 </html>
